--- a/src/app.css
+++ b/src/app.css
@@ -1,16 +1,36 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-.fondo{
-    background-image: url('https://images.ctfassets.net/zufa6rs33wd9/opmoKkyR8cAcoCMIAkWWs/87889ff689f1b96bfee81e3885bf13cb/qbsygspqfzhso5aqmurq?w=2000&q=50');
+.fondo {
+  /* background-image: url('https://images.ctfassets.net/zufa6rs33wd9/opmoKkyR8cAcoCMIAkWWs/87889ff689f1b96bfee81e3885bf13cb/qbsygspqfzhso5aqmurq?w=2000&q=50'); */
+  animation: changeBg 5s infinite alternate linear;
 }
 
-.title{
-    text-align: center;
-    color: yellow;
-    font-size: 50px;
-    background-color: black;
+.title {
+  text-align: center;
+  color: yellow;
+  font-size: 50px;
+  background-color: black;
+  width: 100%;
+  height: 75px;
+}
+
+@keyframes changeBg {
+  0% {
+    background: #f71a0b;
+  }
+  25% {
+    background: #0bc45e;
+  }
+  50% {
+    background: #65e625;
+  }
+  75% {
+    background: #eab332;
+  }
+  100% {
+    background: #e9411b;
+  }
 }
