--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 
 .title {
   text-align: center;
-  color: yellow;
+  color: rgba(171, 176, 179, 0.653);
   font-size: 50px;
   background-color: black;
   width: 100%;
